# UNendding_X

./: .gitignore  DEVELOPMENT.md  README.md  SPLIT_PLAN.md  UNendding_X.pem  agenthub-plan.html  check_api.py  docker-compose.yml  html_to_pdf.py  test_api.py  unendingx.bundle
.claude/: settings.local.json
backend/: .env.example  Dockerfile.backend  alembic.ini  requirements.txt  run_all_tests.py  test_cli_e2e.py  test_e2e.py  test_p2.py  test_p2_a2a_auth.py  test_p3.py  test_p3_token_security.py  test_p4_access_levels.py  test_p5_gui_chat.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_p4_p5_tables.py
backend/app/: config.py  database.py  db_types.py  main.py
backend/app/a2a/: __init__.py  auth.py  server.py  types.py
backend/app/api/: abilities.py  ai.py  alliance.py  audit.py  auth.py  discussion.py  groups.py  messages.py  skills.py
backend/app/models/: __init__.py  ability.py  agent.py  alliance.py  audit_log.py  group.py  message.py  refresh_token.py  skill_token.py  skill_usage.py
backend/app/rbac/: __init__.py
backend/app/ws/: __init__.py  manager.py  router.py
backend/tests/: __init__.py  test_a2a.py  test_auth.py  test_groups.py
cli/: README.md  install_packages.py  pyproject.toml
cli/unendingx/: __init__.py  __main__.py  cli.py  client.py  config.py  format.py  pyproject.toml
cli/unendingx/unendingx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/unendingx_gui/: README.md  __init__.py  cli.py  pyproject.toml
deploy/: 1-install.sh  2-upload.bat  README.md  env.prod.example
frontend/: Dockerfile.frontend  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend-gui/: package.json  tailwind.config.ts
frontend-gui/src/app/: globals.css  layout.tsx  page.tsx
frontend-gui/src/app/dashboard/: layout.tsx
frontend-gui/src/app/dashboard/audit/: page.tsx
frontend-gui/src/app/login/: page.tsx
frontend-gui/src/components/: chat-message.tsx
frontend-gui/src/lib/: i18n.tsx
frontend/src/app/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/abilities/: page.tsx
frontend/src/app/dashboard/alliance/: page.tsx
frontend/src/app/landing/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: mention-select.tsx
frontend/src/lib/: api.ts  i18n.tsx  message-store.ts  useWebSocket.ts
(+3 files in other folders)
