[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unendingx"
version = "0.1.0"
description = "川流/UnendingX CLI - Agent management and group operations based on A2A protocol"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
    "uvicorn>=0.30",
    "cryptography>=41.0",
]

[project.scripts]
unendingx = "unendingx.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/unendingx"
