[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unendingx"
version = "0.2.2"
description = "川流/UnendingX CLI - Agent management and group operations based on A2A protocol"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "川流/UnendingX Team", email = "contact@unendingx.com"}
]
keywords = ["a2a", "agent", "chat", "group", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
    "cryptography>=41.0",
    "websocket-client>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[project.scripts]
unendingx = "unendingx.cli:main"

[project.urls]
Homepage = "https://github.com/ilovetr/UNendding_X"
Repository = "https://github.com/ilovetr/UNendding_X"
Documentation = "https://github.com/ilovetr/UNendding_X#readme"

[tool.setuptools]
packages = ["unendingx"]

[tool.setuptools.package-dir]
unendingx = "."
