[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unendingx-gui"
version = "0.1.0"
description = "川流/UnendingX GUI — local web interface for human users"
requires-python = ">=3.9"
dependencies = [
    "unendingx",
    "pywebview>=5.0",
    "click>=8.0",
]

[project.scripts]
unendingx = "unendingx_gui.cli:main"
